# doors-os

./: .gitignore  ASM_C++.DOC  CMakeLists.txt  Cargo.toml  Ckernel.c  Ckernel.cpp  Fat12.bat  Grub.img  Makefile  MakefileOld  NewDel.h  OLD_link.ld  PIC.c  PIC.h  Programming the NEC PD765 and Intel 82072-7 Floppy Disk Con.htm  ProgrammingFloppyDiskController.htm  README  README.md  Xavier's programming pages - PIC programming.htm  app-link.ld  bochsrc.txt  bochsrc32.txt  bochsrc64.txt  bochsrc64_windows.txt  bochsrc64gdb.txt  boot_info.h  bootload.asm  cd.txt  compile.sh  disk.c  disk.cpp  disk.h  dma.c  dma.h  elf.cpp  elf.h  entrance.asm  entrance.h  fat.c  fat.cpp  (+74 more)
.cargo/: config.toml
cross-compile/: compile-newlib.sh  cross-compile.sh
cross-compile/binutils-2.18/: config.sub
cross-compile/binutils-2.18/bfd/: config.bfd
cross-compile/binutils-2.18/gas/: configure.tgt
cross-compile/binutils-2.18/ld/: Makefile.in  configure.tgt
cross-compile/gcc-4.2.2/: config.sub
cross-compile/gcc-4.2.2/gcc/: config.gcc
cross-compile/gcc-4.2.2/gcc/config/: doors.h
cross-compile/newlib-1.15.0/: config.sub
cross-compile/newlib-1.15.0/newlib/: configure.host
cross-compile/newlib-1.15.0/newlib/libc/sys/: configure.in
cross-compile/newlib-1.15.0/newlib/libc/sys/doors/: Makefile.am  Makefile.in  configure  crt0.S  syscalls.c
cross-compile/newlib-1.15.0/newlib/libc/sys/doors/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
cross-compile/newlib-1.15.0/newlib/libc/sys/doors/sys/: syscalls.h
doors_kernel_api/: Cargo.toml
doors_kernel_api/src/: lib.rs  video.rs
doors_macros/: Cargo.toml
doors_macros/src/: config.rs  lib.rs
doors_macros2/: Cargo.toml
doors_macros2/src/: lib.rs
iso/: README  test
kernel/: CMakeLists.txt  Cargo.toml  Makefile  Makefile.am  Makefile.in  NETBOOT  README  bochs_symbol_filter  bsfcontents  build.rs  config.h  config.h.in  config.rs  config.status  configure  configure.ac  configure.scan  floppy.sh  floppy.txt  i386-unknown-none.json  network.lst  network.sh  network.txt  objdump_output2  rust-toolchain.toml  serial.txt  skeleton.img  test.c
kernel/iso/boot/grub/: menu.lst  stage2_eltorito
kernel/loader/: Makefile  Makefile.in  link.ld
kernel/loader/.deps/: loaderb.Po
kernel/src/: Makefile  Makefile.am  Makefile.in  boot_info.c  common.rs  config.rs  disk.cpp  dma.h  elf.cpp  entrance.h  executor.rs  fat.h  file.cpp  gdbstub.rs  interrupt_table.h  keyboard.h  main.rs  memory.h  message.h  module.cpp  spinlock.h  string.cpp  string.h  support.c  terminal.h  test.rs  tss.h
kernel/src/assert/: assert.c
kernel/src/boot/: memory.rs  mod.rs
kernel/src/boot/arm/: mod.rs  stm32f769i-disco.ld  stm32f769i_disco.rs
kernel/src/boot/arm/stm32f769i_disco/: memory.rs  mod.rs
kernel/src/boot/multiboot/: mod.rs
kernel/src/boot/x86/: linker.ld  memory.rs  mod.rs
kernel/src/boot/x86/boot32/: gdt.rs  memory.rs  mod.rs
kernel/src/boot/x86/boot64/: boot.s  memory.rs  mod.rs
kernel/src/kernel/: mod.rs
kernel/src/modules/: mod.rs
kernel/src/modules/clock/: mod.rs  stm32f769.rs
kernel/src/modules/gpio/: mod.rs  stm32f769.rs
kernel/src/modules/interrupt/: mod.rs
kernel/src/modules/memory/: mod.rs  stm32f769.rs  stm32f769_fmc.rs
kernel/src/modules/network/: mod.rs
kernel/src/modules/network/intel/: mod.rs  pro1000.rs
kernel/src/modules/pci/: mod.rs
kernel/src/modules/pci/x86/: mod.rs
kernel/src/modules/power/: mod.rs  stm32f769.rs
kernel/src/modules/reset/: mod.rs  stm32f769.rs
kernel/src/modules/rng/: mod.rs
kernel/src/modules/serial/: mod.rs  stm32f769.rs  x86.rs
kernel/src/modules/timer/: mod.rs  stm32f769.rs  x86.rs
kernel/src/modules/video/: fonts.rs  mod.rs  pixels.rs  text.rs  vga.rs
kernel/src/modules/video/mipi_dsi/: mod.rs  stm32f769.rs
kernel/src/scheduler/: mod.rs  x86.s
kernel/src/stdio/: README  stdio.c
kernel/src/stdlib/: stdlib.c
kernel/src/x86/: PIC.c  debug.c  entrance.s  floppy.cpp  gdb-support.cpp  gdt.c  interrupt_table.c  keyboard.c  link.ld  main.cpp  makefloppy.in  memory.cpp  memory.rs  mod.rs  spinlock.c  tss.cpp  video.cpp
kernel/src/x86/boot32/: boot.s  gdt.rs  memory.rs  mod.rs
kernel/src/x86/boot64/: boot.s  memory.rs  mod.rs
kernel/src/x86/disasm/: README.txt  decode.c  extern.h  input.c  input.h  syn.h  types.h  udis86.c
module/: serial.c  serial.h
network_test/: Cargo.toml
network_test/src/: main.rs
oldkernel/: README  cd.sh  cd.txt  config.h.in  configure.ac  floppy.sh  floppy.txt  network.lst  network.sh  network.txt  test.c
oldkernel/loader/: Makefile.am  Makefile.in  loadera.s
oldkernel/src/: PIC.h  assert.h  debug.h  disk.cpp  disk.h  elf.cpp  fat.cpp  floppy.h  memory.h  message.c  serial.h  stdio.h  stdlib.h  vmm.h
oldkernel/src/string/: string.c
oldkernel/src/x86/: PIC.c  debug.c  dma.c  floppy.cpp  gdt.c  hd.cpp  link.ld  memory.cpp  serial.cpp  vmm.cpp
oldkernel/src/x86/disasm/: extern.h  input.h
oldkernel/tools/: Makefile  README  apply-patch.sh  compile-newlib.sh
oldkernel/tools/patch/: binutils-2.18-patch
tools/: compile-bochs.sh  create-patch.sh  cross-compile.sh
tools/patch/: gcc-4.2.2-patch  gcc-4.3.2-patch  newlib-1.15.0-patch  newlib-1.16.0-patch
