[package]
name = "doors_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true
doc=false

[dependencies]
quote = "1.0.23"
proc-macro2 = "1.0.51"
serde = {version = "1.0", features = ["serde_derive"] }
serde-value = "0.7.0"
syn = {version = "1.0.109", features = ["full"]}
lazy_static = {version = "1.4.0", features = ["spin_no_std"] }
toml = "0.8.8"
