[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
arraystring = {version = "0.3.0", default-features=false }
bitflags = "2.4.2"
doors_macros = { path = "../doors_macros", version = "0.1.0" }
doors_macros2 = { path = "../doors_macros2", version = "0.1.0" }
enum_dispatch = "0.3.12"
lazy_static = {version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
volatile = "0.4.6"

[build-dependencies]
serde = {version = "1.0", features = ["serde_derive"] }
target_build_utils = "0.3.1"
toml = "0.8.8"

[target.'cfg(target_arch = "x86")'.dependencies]
acpi = "4.1.1"
raw-cpuid = "11.0.1"
x86 = { version = "0.52.0" }
multiboot2 = "0.18.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
acpi = "4.1.1"
raw-cpuid = "11.0.1"
x86_64 = {git = "https://github.com/rust-osdev/x86_64.git", version = "0.15.1", default-features=false, features = ["instructions", "const_fn"] }
multiboot2 = "0.18.1"
