[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
arraystring = {version = "0.3.0", default-features=false }
bitfield = "0.17.0"
bitflags = "2.4.2"
cfg-if = "1.0.0"
doors_macros = { path = "../doors_macros", version = "0.1.0" }
doors_macros2 = { path = "../doors_macros2", version = "0.1.0" }
enum_dispatch = "0.3.13"
lazy_static = {version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.20"
spin = "0.9.8"
volatile = "0.4.6"

[build-dependencies]
fontdue = "0.9.2"
serde = {version = "1.0", features = ["serde_derive"] }
target_build_utils = "0.3.1"
toml = "0.8.8"

[target.'cfg(target_arch = "x86")'.dependencies]
acpi = { git = "https://github.com/rust-osdev/acpi.git", version = "5.1.0" }
aml = "0.16.4"
raw-cpuid = "11.0.1"
x86 = { version = "0.52.0" }
multiboot2 = "0.19.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
acpi = { git = "https://github.com/rust-osdev/acpi.git", version = "5.1.0" }
aml = "0.16.4"
raw-cpuid = "11.0.1"
x86_64 = {git = "https://github.com/rust-osdev/x86_64.git", version = "0.15.1", default-features=false, features = ["abi_x86_interrupt", "instructions", "const_fn"] }
multiboot2 = "0.19.0"
